# anticipation-layer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  anticipation_config.yaml  pyproject.toml
examples/: basic_usage.py  claude_agent.py
skill/: SKILL.md
skill/references/: concept.md
skill/scripts/: check_decay.py  consolidate.py  init.py  metrics.py
src/anticipation_layer/: __init__.py  context_assembly.py  layer.py  models.py  similarity.py  storage.py  update_engine.py
src/anticipation_layer/generators/: __init__.py  base.py  claude.py
src/anticipation_layer/integrations/: __init__.py  langgraph.py
tests/: conftest.py  test_core.py  test_similarity.py
