[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anticipation-layer"
version = "0.1.0"
description = "Persistent Temporal Awareness for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Anticipation Layer Contributors" },
]
keywords = ["ai", "agents", "anticipation", "planning", "temporal-awareness", "predictive-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
llm = ["anthropic>=0.30.0", "openai>=1.0.0"]
embeddings = ["sentence-transformers>=2.0.0"]
config = ["pyyaml>=6.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/anticipation-layer"
Repository = "https://github.com/YOUR_USERNAME/anticipation-layer"
Issues = "https://github.com/YOUR_USERNAME/anticipation-layer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anticipation_layer"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
